# DocMindAI

./: .env.example  .gitignore  ADVANCED_FEATURES_GUIDE.md  CHEATSHEET.md  COMPLETE_TESTING_GUIDE.md  CONCURRENT_UPLOAD_FIX.md  DOCUMENT_PROCESSING_GUIDE.md  Dockerfile.backend  FRONTEND_GUIDE.md  FRONTEND_INTEGRATION.md  FRONTEND_TESTING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WIDGET_INTEGRATION_GUIDE.md  docker-compose.yml  docmind.db  pyproject.toml  run.sh  sample.html  seed_db.py  setup.sh  test-chat-api.sh  test-diagnostics.html  test-widget-manual.html  test-widget.html  test_integration.sh  test_setup.py  widget-template.html
backend/: __init__.py  advanced_rag.py  agent_config.py  auth.py  config.py  database.py  file_handler.py  main.py  new_endpoints.py  rag_engine.py  rate_limiter.py  schemas.py
data/chroma/: chroma.sqlite3
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/dashboard/conversations/: page.tsx
frontend/app/dashboard/documents/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: ProtectedRoute.tsx  ToasterProvider.tsx  ui.tsx
frontend/context/: AuthContext.tsx
uploads/19d08036-9797-4f0f-8279-dfd2b7207025/: text_167e6c57-3c45-45e1-917e-13af30e3b001.txt
widget/: widget.js
